--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "mailparser": "^3.7.2",
     "next": "14.1.0",
+    "node-imap": "^0.9.6",
     "react": "^18",
     "react-dom": "^18"
   },
