add verifiable credential issuance

--- a/backend/package.json
+++ b/backend/package.json
@@ -28,13 +28,17 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/mailparser": "^3.4.5",
     "@types/node-imap": "^0.9.3",
     "@veramo/core": "^6.0.0",
+    "@veramo/credential-ld": "^6.0.0",
     "@veramo/credential-w3c": "^6.0.0",
     "@veramo/data-store": "^6.0.0",
     "@veramo/did-manager": "^6.0.0",
     "@veramo/did-provider-ethr": "^6.0.0",
+    "@veramo/did-provider-jwk": "^6.0.0",
+    "@veramo/did-provider-key": "^6.0.0",
     "@veramo/did-resolver": "^6.0.0",
     "@veramo/key-manager": "^6.0.0",
     "@veramo/kms-local": "^6.0.0",
@@ -42,12 +46,18 @@
     "ethers": "^6.13.5",
     "ethr-did-resolver": "^11.0.3",
     "googleapis": "^148.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "key-did-resolver": "^4.0.0",
+    "lodash": "^4.17.21",
     "mailparser": "^3.7.2",
     "node-imap": "^0.9.6",
+    "nodemailer": "^6.10.1",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.22",
+    "uuid": "^11.1.0",
     "web-did-resolver": "^2.0.30"
   },
   "devDependencies": {
