--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@zkpassport/sdk": "^0.3.4",
     "axios": "^1.9.0",
     "mailparser": "^3.7.2",
     "next": "14.1.0",
     "node-imap": "^0.9.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.15",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
