--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@zk-email/sdk": "^0.0.139",
     "@zkpassport/sdk": "^0.3.4",
     "axios": "^1.9.0",
     "mailparser": "^3.7.2",
@@ -18,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.15",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
