--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@zk-email/sdk": "^0.0.139",
     "@zkpassport/sdk": "^0.3.4",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
     "mailparser": "^3.7.2",
     "next": "14.1.0",
     "node-imap": "^0.9.6",
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.15",
+    "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
     "zustand": "^5.0.4"
   },
