--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@zkpassport/sdk": "^0.3.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
+    "lodash": "^4.17.21",
     "mailparser": "^3.7.2",
     "next": "14.1.0",
     "node-imap": "^0.9.6",
