--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.2.2",
+    "@types/lodash": "^4.17.16",
     "@zk-email/sdk": "^0.0.139",
     "@zkpassport/sdk": "^0.3.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
+    "jose": "^6.0.11",
     "lodash": "^4.17.21",
     "mailparser": "^3.7.2",
     "next": "14.1.0",
