--- a/backend/package.json
+++ b/backend/package.json
@@ -92,6 +92,9 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
+  "resolutions": {
+    "jsonld": "^5.2.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
