--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aztec/accounts": "^0.85.0",
     "@aztec/aztec.js": "^0.85.0",
+    "@aztec/bb.js": "0.72.1",
     "@aztec/noir-contracts.js": "^0.85.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -31,6 +32,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@noble/ed25519": "^2.2.3",
     "@noble/hashes": "^1.8.0",
+    "@noir-lang/noir_js": "1.0.0-beta.2",
     "@noir-lang/noir_wasm": "^1.0.0-beta.3",
     "@types/mailparser": "^3.4.5",
     "@types/node-imap": "^0.9.3",
@@ -47,9 +49,12 @@
     "@veramo/utils": "^6.0.0",
     "@zk-email/sdk": "^0.0.139",
     "circomlibjs": "^0.1.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "crypto": "^1.0.1",
     "ethers": "^6.13.5",
     "ethr-did-resolver": "^11.0.3",
+    "express": "^5.1.0",
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "key-did-resolver": "^4.0.0",
