--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,8 @@
     "@zk-email/sdk": "^0.0.139",
     "@zkpassport/sdk": "^0.3.4",
     "axios": "^1.9.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
-    "jose": "^6.0.11",
     "lodash": "^4.17.21",
     "mailparser": "^3.7.2",
     "next": "14.1.0",
