--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,9 +14,10 @@ COPY . .
 
 ARG NEXT_PUBLIC_BASE_URL
 ARG NEXT_PUBLIC_BACKEND_URL
-
+ARG NEXT_PUBLIC_BASE_SEPOLIA_VERIFIER
 ENV NEXT_PUBLIC_BASE_URL=https://zk-access.aichallenge.fun
 ENV NEXT_PUBLIC_BACKEND_URL=https://api.zk-access.aichallenge.fun
+ENV NEXT_PUBLIC_BASE_SEPOLIA_VERIFIER=0x20c0aa08d78cbcf3634b38ad587a9cc75b250ffc
 
 RUN yarn install
 
